Changed to Paths (Travis doesn't like Path)